--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Alltuch | Software Consulting HTML And Sass Template</title>
+	<title>ImageDupc</title>
 	<!-- ficon 
 	============================================ -->
 	<link rel="shortcut icon" href="assets/img/ficon.png">
@@ -35,8 +35,8 @@
 								<li> <a class="page-scroll" href="#home">Home</a></li>
 								<li> <a class="page-scroll" href="#features">About</a> </li>
 								<li> <a class="page-scroll" href="#services">Services</a> </li>
-								<li> <a class="page-scroll" href="#blog">Blog</a></li>
-								<li> <a class="page-scroll" href="#prices" >Price</a></li>
+								<!-- <li> <a class="page-scroll" href="#blog">Blog</a></li> -->
+								<!-- <li> <a class="page-scroll" href="#prices" >Price</a></li> -->
 								<li> <a class="page-scroll" href="#contact">Contact</a> </li>
 							</ul>
 							<!-- /.navbar-collapse -->
@@ -55,9 +55,9 @@
 					<div class="main-header-text animated fadeIn">
 						<div class="col-md-6">
 							<h1 class="wow  bounceInLeft animated">
-							Uniqe Software landing page
+							Image Similarity Detection for E-commerce Monitoring
 							</h1>
-							<p class="wow  bounceInLeft animated">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy </p> <a href="#" class="wow  bounceInLeft animated">read more</a> </div>
+							<p class="wow  bounceInLeft animated">Deteksi keaslian foto produk pada toko online pilihan anda</p> <a href="#" class="wow  bounceInLeft animated">Start It</a> </div>
 						<div class="col-md-6"> 
 							<img src="assets/images/header-img.png" alt="header-img" class="wow slideInUp animated" /> 
 						</div>
